# sif

./: .clang-format  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  SConstruct.py  dev-requirements.txt  flake.nix  pyproject.toml  requirements.txt
include/sif/: atomic.h  list.h  mutex.h  sif.h  syscall.h  task.h  tick.h
include/sif/arch/armv6-m/: macros.s  port-asm.h  port.h  registers.s  types.h
include/sif/arch/armv6s-m/: macros.s  port-asm.h  port.h  registers.h  registers.s  types.h
include/sif/march/rp2040/: config.h  port-asm.h  port.h  registers.h  registers.s
include/sif/march/rp2040/include/sif/: port-asm.h  port.h
include/sif/mcu/rp2040/: config.h  port-asm.h  port.h  registers.h  types.h
include/sif/private/: mutex.h  sif.h  syscall.h  task.h
ld/: memory.ld  no_flash.ld  sections.ld  symbols.ld
lib/: CMakeLists.txt
src/: CMakeLists.txt  SConscript.py  crt0.S  hello-world.c  list.c  mutex.c  sif.c  syscall.c  task.c  tick.c  vectors.S
src/arch/armv6-m/: port-asm.s  port.c
src/arch/armv6s-m/: SConscript.py  port-asm.S  port-asm.s  port.c
src/march/rp2040/: SConscript.py  port-asm.s  port.c  registers.h
src/mcu/rp2040/: SConscript.py  port-asm.S  port-asm.s  port.c
